--- a/index.html
+++ b/index.html
@@ -2,24 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>css exercise four</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>css-exercise-four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <section class="container">
-      <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku">
-        <h1>Baku</h1>
+      <div class="mod">
+        <h1><span class="emphasis">modern luxury travel</span></h1>
       </div>
-      <div class="preview london">
-        <h1>London</h1>
+      <div class="previewb">
+        <img src="images\baku.jpg" class="size" alt="Baku">
+
+          <h1><span id="textb">Baku</span></h1>
+
       </div>
-      <div class="preview madrid">
-        <h1>Madrid</h1>
+      <div class="previewl">
+
+        <img src="images\london.png" class="size" alt="London">
+          <h1><span id="textl">London</span></h1>
+
       </div>
-      <div class="preview rome">
-        <h1>Rome</h1>
+      <div class="previewm">
+        <img src="images\madrid.jpg" class="size" alt="Madrid">
+          <h1><span id="textm">Madrid</span></h1>
+
+      </div>
+      <div class="previewr">
+        <img src="images\rome.jpg" class="size" alt="Rome">
+
+          <h1><span id="textr">Rome</span></h1>
+
       </div>
     </section>
   </body>
