--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>css exercise four</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
